增加管理员登陆页

--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -13,7 +13,7 @@
 	<link rel="bookmark"  type="image/x-icon"  href="/static/ico/favicon.ico"/>
 </head>
 <body class="all-all">
-	{% block topad %}{% endblock %}
+	{% block login %}{% endblock %}
 	{% block search %}{% endblock %}
 	{% block midnav %}{% endblock %}
 	{% block mainlink %}{% endblock %}
