--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -13,6 +13,7 @@
 			</div><br>
 			<div class="input-group input-group-sm">
 				<button type="submit" class="btn btn-default">登陆</button>
+				<button class="btn btn-default"><a href="/useradd">注册</a></button>
 			</div>
 		</form>
 	</div>
