优化登陆页

--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block login %}
-<div class="container btn-danger">
+<div class="container btn-danger login-admin">
 	<div class="login-admin">
 		<form class="bs-example bs-example-form" role="form">
 			<div class="input-group input-group-lg">
