优化登陆页

--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block login %}
 <div class="container btn-danger login-admin">
-	<div class="login-admin">
+	<div class="login-admin-input">
 		<form class="bs-example bs-example-form" role="form">
 			<div class="input-group input-group-lg">
 				<span class="input-group-addon">用户</span>
