--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -7,11 +7,11 @@
 				<span class="input-group-addon">用户</span>
 				<input type="text" class="form-control" id="user" placeholder="请输入用户名">
 			</div><br>
-			<div class="input-group">
+			<div class="input-group input-group-lg">
 				<span class="input-group-addon">密码</span>
 				<input type="text" class="form-control" id="passwd" placeholder="请输入密码">
 			</div><br>
-			<div class="input-group input-group-sm">
+			<div class="input-group input-group-lg">
 				<button type="submit" class="btn btn-default">登陆</button>
 				<button class="btn btn-default"><a href="/useradd">注册</a></button>
 			</div>
