--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -14,7 +14,7 @@
 </head>
 <body class="all-all">
 	{% block login %}{% endblock %}
-	{% block search %}{% endblock %}
+	{% block admin %}{% endblock %}
 	{% block midnav %}{% endblock %}
 	{% block mainlink %}{% endblock %}
 	{% block bodylink %}{% endblock %}
