增加内容页

--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -2,11 +2,11 @@
 {% block admin %}
 <div class="">
     <div class="row" >
-        <div class="col-xs-6 col-sm-3" >
+        <div class="col-xs-6 btn-danger" >
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-             <a href="http:www.baidu.com" target="context"></a>
+             <a href="http:www.baidu.com" target="context">百度</a>
         </div>
-    <div class="col-xs-6 col-sm-3" id="context">
+    <div class="col-xs-6 btn-info" id="context">
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do 
             eiusmod tempor incididunt ut. 
          </p>
