--- a/pro/templates/admin_context.html
+++ b/pro/templates/admin_context.html
@@ -3,7 +3,7 @@
 <div class="">
     <frameset cols="20%,80%">
         <frame src="/admin_title.html"></frame>
-        <frame src="/admin_context.html" name="show"></frame>
+        <frame src="/admin_context.html"></frame>
     </frameset>
 </div>
 {% endblock %}
