增加分页显示

--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,9 +1,8 @@
-{% extends "layout.html" %}
-{% block admin %}
-<div class="">
+<!DOCTYPE html>
+<html>
     <frameset cols="20%,80%">
-        <frame src="/admin_title.html"></frame>
-        <frame src="/admin_context.html" name="show"></frame>
+        <frame src="/admin_title.html"/>
+        <frame src="/admin_context.html" name="show"/>
     </frameset>
-</div>
-{% endblock %}
+</html>
+    
