--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,8 +1,5 @@
-{% extends "layout.html" %}
-{% block admin %}
-<div class="">
+<html>
     <p><a href="https://www.baidu.com/" target="show">baidu</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">sina</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">sohu</a></p>
-</div>
-{% endblock %}
+</html>
