--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <frameset cols="20%,80%">
-        <frame src="/admin_title.html"/>
-        <frame src="/admin_context.html" name="show"/>
+        <frame src="/static/admin_title.html"/>
+        <frame src="/static/admin_context.html" name="show"/>
     </frameset>
 </html>
     
