--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -2,7 +2,7 @@
 <html>
     <frameset cols="20%,80%">
         <frame src="admin_title.html"/>
-        <frame src="admin_context.html" name="show"/>
+        <frame src="admin.html" name="show"/>
     </frameset>
 </html>
     
