--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <frameset cols="20%,80%">
-        <frame src="admin_title.html"/>
-        <frame src="admin.html" name="show"/>
+        <frame src="{{url_for('/login/admin')}}"/>
+        <frame src="{{url_for('/title/admin')}}" name="show"/>
     </frameset>
 </html>
     
