--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <frameset cols="20%,80%">
-        <frame src="{% url_for('/login/admin') %}"/>
-        <frame src="{% url_for('/title/admin') %}" name="show"/>
+        <frame src="/login/admin"/>
+        <frame src="/title/admin" name="show"/>
     </frameset>
 </html>
     
