--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
     <frameset cols="20%,80%">
-        <frame src="/login/admin"/>
-        <frame src="/title/admin" name="show"/>
+        <frame src=""/>
+        <frame src="" name="show"/>
     </frameset>
 </html>
     
