--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -2,7 +2,7 @@
 <html>
     <frameset cols="20%,80%">
         <frame src="{{ url_for('admintitle')}}"/>
-        <frame src="{{ url_for('adminlogin')}}" name="show"/>
+        <frame src="" name="show"/>
     </frameset>
 </html>
     
