优化侧边栏

--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>会议室预订管理系统</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block admin %}
     <button class="btn btn-info">人事管理</button>
     <p><a href="https://www.baidu.com/" target="show">添加用户</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">查询用户</a></p>
@@ -19,5 +15,4 @@
     <p><a href="http://www.sina.com.cn/" target="show">修改密码</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">上传照片</a></p>
     <p><a href="https://www.baidu.com/" target="show">个人信息</a></p>
-</body>
-</html>
+{% endblock %}
