--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block admin %}
+<div class="container">
     <button class="btn btn-info">人事管理</button>
     <p><a href="https://www.baidu.com/" target="show">添加用户</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">查询用户</a></p>
@@ -14,5 +15,7 @@
     <p><a href="https://www.baidu.com/" target="show">修改个人资料</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">修改密码</a></p>
     <p><a href="http://www.sina.com.cn/" target="show">上传照片</a></p>
-    <p><a href="https://www.baidu.com/" target="show">个人信息</a></p>
+    <p><a href="https://www.baidu.com/" target="show">个人信息</a></p>  
+</div>
+ 
 {% endblock %}
