--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
-<html>
+{% extends "layout.html" %}
+{% block admin %}
     <frameset cols="10%,90%">
         <frame src="{{ url_for('admintitle')}}"/>
         <frame src="" name="show"/>
     </frameset>
-</html>
+{% endblock %}
     
