优化侧边栏

--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,8 +1,7 @@
-{% extends "layout.html" %}
-{% block admin %}
+<!DOCTYPE html>
+<html>
     <frameset cols="10%,90%">
         <frame src="{{ url_for('admintitle')}}"/>
         <frame src="" name="show"/>
     </frameset>
-{% endblock %}
-    
+</html>
