--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,27 +1,62 @@
 {% extends "layout.html" %}
 {% block admin %}
 <div class="container">
-    <div class="container">
-    <button class="btn btn-info">人事管理</button>
-        <br><br><p><a href="https://www.baidu.com/" target="show">添加用户</a></p>
-        <p><a href="http://www.sina.com.cn/" target="show">查询用户</a></p>
-        <p><a href="http://www.sina.com.cn/" target="show">用户信息</a></p>
-        <p><a href="https://www.baidu.com/" target="show">管理员信息</a></p>
-    </div>
-    <div class="container">
-    <button class="btn btn-info">会议室管理</button>
-        <br><br><p><a href="https://www.baidu.com/" target="show">添加会议室</a></p>
-        <p><a href="http://www.sina.com.cn/" target="show">查询会议室</a></p>
-        <p><a href="http://www.sina.com.cn/" target="show">会议室信息</a></p>
-        <p><a href="https://www.baidu.com/" target="show">会议室审批</a></p>
-    </div>
-    <div class="container">
-    <button class="btn btn-info">个人管理</button>
-        <br><br><p><a href="https://www.baidu.com/" target="show">修改个人资料</a></p>
-        <p><a href="http://www.sina.com.cn/" target="show">修改密码</a></p>
-        <p><a href="http://www.sina.com.cn/" target="show">上传照片</a></p>
-        <p><a href="https://www.baidu.com/" target="show">个人信息</a></p>
+    <div class="panel-group" id="accordion">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" 
+                       href="#collapseOne">
+                        <button class="btn btn-info">人事管理</button>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseOne" class="panel-collapse collapse in">
+                <div class="panel-body">
+                    <br><br><p><a href="https://www.baidu.com/" target="show">添加用户</a></p>
+                    <p><a href="http://www.sina.com.cn/" target="show">查询用户</a></p>
+                    <p><a href="http://www.sina.com.cn/" target="show">用户信息</a></p>
+                    <p><a href="https://www.baidu.com/" target="show">管理员信息</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" 
+                       href="#collapseTwo">
+                        <button class="btn btn-info">会议室管理</button>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseTwo" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <br><br><p><a href="https://www.baidu.com/" target="show">添加会议室</a></p>
+                    <p><a href="http://www.sina.com.cn/" target="show">查询会议室</a></p>
+                    <p><a href="http://www.sina.com.cn/" target="show">会议室信息</a></p>
+                    <p><a href="https://www.baidu.com/" target="show">会议室审批</a></p>
+                </div>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-toggle="collapse" data-parent="#accordion" 
+                       href="#collapseThree">
+                        <button class="btn btn-info">个人管理</button>
+                    </a>
+                </h4>
+            </div>
+            <div id="collapseThree" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <br><br><p><a href="https://www.baidu.com/" target="show">修改个人资料</a></p>
+                    <p><a href="http://www.sina.com.cn/" target="show">修改密码</a></p>
+                    <p><a href="http://www.sina.com.cn/" target="show">上传照片</a></p>
+                    <p><a href="https://www.baidu.com/" target="show">个人信息</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
- 
+
 {% endblock %}
