优化侧边栏

--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -13,7 +13,7 @@
             </div>
             <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    <br><br><p><a href="https://www.baidu.com/" target="show">添加用户</a></p>
+                    <p><a href="https://www.baidu.com/" target="show">添加用户</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">查询用户</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">用户信息</a></p>
                     <p><a href="https://www.baidu.com/" target="show">管理员信息</a></p>
@@ -31,7 +31,7 @@
             </div>
             <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <br><br><p><a href="https://www.baidu.com/" target="show">添加会议室</a></p>
+                    <p><a href="https://www.baidu.com/" target="show">添加会议室</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">查询会议室</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">会议室信息</a></p>
                     <p><a href="https://www.baidu.com/" target="show">会议室审批</a></p>
@@ -49,7 +49,7 @@
             </div>
             <div id="collapseThree" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <br><br><p><a href="https://www.baidu.com/" target="show">修改个人资料</a></p>
+                    <p><a href="https://www.baidu.com/" target="show">修改个人资料</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">修改密码</a></p>
                     <p><a href="http://www.sina.com.cn/" target="show">上传照片</a></p>
                     <p><a href="https://www.baidu.com/" target="show">个人信息</a></p>
