优化侧边栏

--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -2,7 +2,7 @@
 {% block admin %}
 <div class="container">
     <div class="panel-group" id="accordion">
-        <div class="panel panel-default">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" 
@@ -20,7 +20,7 @@
                 </div>
             </div>
         </div>
-        <div class="panel panel-success">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 <h4 class="panel-title">
                     <a data-toggle="collapse" data-parent="#accordion" 
