--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -59,7 +59,7 @@
     </div>
 </div>
 <script type="text/javascript">
-    $(function () { $('#collapseTwo').collapse('show')});
+    $(function () { $('#collapseTwo').collapse('hide')});
     $(function () { $('#collapseThree').collapse('toggle')});
     $(function () { $('#collapseOne').collapse('hide')});
 </script>  
