优化侧边栏

--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -59,9 +59,9 @@
     </div>
 </div>
 <script type="text/javascript">
-    $(function () { $('#collapseTwo').collapse('toggle')});
-    $(function () { $('#collapseThree').collapse('toggle')});
-    $(function () { $('#collapseOne').collapse('toggle')});
+    $(function () { $('#collapseTwo').collapse('show')});
+    $(function () { $('#collapseThree').collapse('show')});
+    $(function () { $('#collapseOne').collapse('show')});
 </script>  
 
 {% endblock %}
