优化侧边栏

--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,6 +1,8 @@
 {% extends "layout.html" %}
 {% block admin %}
 <div class="container">
+    <button class="btn btn-info">当前用户</button>
+    <button class="btn btn-warning">管理菜单</button>
     <div class="panel-group" id="accordion">
         <div class="panel panel-info">
             <div class="panel-heading">
