--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block admin %}
-<div><button class="btn btn-info">当前用户</button></div>
-<div><button class="btn btn-warning">管理菜单</button></div>
+<button class="btn btn-info">当前用户</button>
+<button class="btn btn-warning">管理菜单</button>
 <div class="container">
     <div class="panel-group" id="accordion">
         <div class="panel panel-info">
