--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,7 +1,9 @@
 {% extends "layout.html" %}
 {% block admin %}
-<button class="btn btn-info">当前用户</button>
-<button class="btn btn-warning">管理菜单</button>
+<div class="container">
+    <button class="btn btn-info">当前用户</button>
+    <button class="btn btn-warning">管理菜单</button>
+</div>
 <div class="container">
     <div class="panel-group" id="accordion">
         <div class="panel panel-info">
