--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block admin %}
+<button class="btn btn-info" style="width: 100%;">当前用户</button>
+<button class="btn btn-warning" style="width: 100%;">管理菜单</button>
 <div class="container">
     <div class="panel-group" id="accordion">
         <div class="panel panel-info">
