--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -15,7 +15,7 @@
 <body class="all-all">
 	{% block login %}{% endblock %}
 	{% block admin %}{% endblock %}
-	{% block midnav %}{% endblock %}
+	{% block users %}{% endblock %}
 	{% block mainlink %}{% endblock %}
 	{% block bodylink %}{% endblock %}
 	{% block tools %}{% endblock %}
