--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -1,41 +1,42 @@
 {% extends "layout.html" %}
 {% block users %}
-
-<table class="table table-bordered">
-	<caption>
-		<p class="pull-left">
-			<lable>用户列表</lable>
-		</p>
-		<p class="pull-right">
-			<label>删除</label>
-		</p>
-		<p class="pull-right">
-			<label>修改</label>
-		</p>
-		<p class="pull-right">
-			<label>增加</label>
-		</p>
-		
-		<p class="pull-right">
-			 <label><input type="checkbox">全选</label>
-		</p>
-		
-		
-		
-	</caption>
-	<thead>
-		<tr>
-			<th>选择</th>
-			<th>序号</th>
-			<th>用户姓名</th>
-			<th>联系电话</th>
-			<th>Email</th>
-			<th>创建日期</th>
-			<th>编辑</th>
-			<th>删除</th>
-		</tr>
-	</thead>
-	<tbody>
-	</tbody>
-</table>
+<div>
+	<table class="table table-bordered">
+		<caption>
+			<p class="pull-left">
+				<lable>用户列表</lable>
+			</p>
+			<p class="pull-right">
+				<label>删除</label>
+			</p>
+			<p class="pull-right">
+				<label>修改</label>
+			</p>
+			<p class="pull-right">
+				<label>增加</label>
+			</p>
+			
+			<p class="pull-right">
+				 <label><input type="checkbox">全选</label>
+			</p>
+			
+			
+			
+		</caption>
+		<thead>
+			<tr>
+				<th>选择</th>
+				<th>序号</th>
+				<th>用户姓名</th>
+				<th>联系电话</th>
+				<th>Email</th>
+				<th>创建日期</th>
+				<th>编辑</th>
+				<th>删除</th>
+			</tr>
+		</thead>
+		<tbody>
+		</tbody>
+	</table>
+</div>
 {% endblock %}
