给表格增加效果

--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block users %}
-<div class="users-list">
-	<table class="table table-bordered">
+<div class="users-list table-responsive">
+	<table class="table table-bordered table-hover">
 		<caption>
 			<p class="pull-left">
 				<lable>用户列表</lable>
