加入不同图标

--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -3,9 +3,9 @@
 <div class="users-list table-responsive">
 	<table class="table table-bordered table-hover">
 		<caption>
-			<p class="pull-left">
-				<lable>用户列表</lable>
-			</p>
+			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 20px">
+  				<span class="glyphicon glyphicon-th-list"></span>用户列表
+			</button>	
 			<p class="pull-right">
 				<label>删除</label>
 			</p>
@@ -18,10 +18,7 @@
 			
 			<p class="pull-right">
 				 <label><input type="checkbox">全选</label>
-			</p>
-			
-			
-			
+			</p>	
 		</caption>
 		<thead>
 			<tr>
