--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -3,20 +3,19 @@
 <div class="users-list table-responsive">
 	<table class="table table-bordered table-hover">
 		<caption>
-			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 20px">
+			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
   				<span class="glyphicon glyphicon-th-list"></span>用户列表
 			</button>	
-			<p class="pull-right">
-				<label>删除</label>
-			</p>
-			<p class="pull-right">
-				<label>修改</label>
-			</p>
-			<p class="pull-right">
-				<label>增加</label>
-			</p>
-			
-			<p class="pull-right">
+			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+  				<span class="glyphicon glyphicon-trash"></span>删除
+			</button>	
+			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+  				<span class="glyphicon glyphicon-edit"></span>修改
+			</button>	
+			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+  				<span class="glyphicon glyphicon-plus"></span>增加
+			</button>	
+			<p class="pull-right btn btn-primary btn-lg">
 				 <label><input type="checkbox">全选</label>
 			</p>	
 		</caption>
