加入不同图标

--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -6,13 +6,13 @@
 			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
   				<span class="glyphicon glyphicon-th-list"></span>用户列表
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-trash"></span>删除
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-edit"></span>修改
 			</button>	
-			<button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-plus"></span>增加
 			</button>	
 			<p class="pull-right btn btn-primary btn-lg">
