加入不同图标

--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -15,7 +15,7 @@
 			<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   				<span class="glyphicon glyphicon-plus"></span>增加
 			</button>	
-			<p class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+			<p class="pull-right" style="font-size: 10px">
 				 <label><input type="checkbox">全选</label>
 			</p>	
 		</caption>
