加入页显示

--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -34,5 +34,23 @@
 		<tbody>
 		</tbody>
 	</table>
+	<p>共{{total_page_num}}条记录,</p>
+	<p>当前第{{total_page_num}}页,</p>
+	<p>每页10条记录</p>
+	<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+  		<span class="glyphicon glyphicon-trash"></span>转
+	</button>	
+	<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+  		<span class="glyphicon glyphicon-edit"></span>尾页
+	</button>	
+	<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+  		<span class="glyphicon glyphicon-plus"></span>下一页
+  	</button>
+  	<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+  		<span class="glyphicon glyphicon-plus"></span>上一页
+  	</button>
+	<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
+  		<span class="glyphicon glyphicon-plus"></span>首页
+  	</button>
 </div>
 {% endblock %}
