加入页显示

--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -34,9 +34,9 @@
 		<tbody>
 		</tbody>
 	</table>
-	<p>共{{total_page_num}}条记录,</p>
-	<p>当前第{{total_page_num}}页,</p>
-	<p>每页10条记录</p>
+	<p class="pull-left">每页10条记录</p>
+	<p class="pull-left">当前第{{total_page_num}}页,</p>
+	<p class="pull-left">共{{total_page_num}}条记录,</p>
 	<button type="button" class="btn btn-primary btn-lg pull-right" style="font-size: 10px">
   		<span class="glyphicon glyphicon-trash"></span>转
 	</button>	
