--- a/pro/templates/users_list.html
+++ b/pro/templates/users_list.html
@@ -32,6 +32,16 @@
 			</tr>
 		</thead>
 		<tbody>
+            {% for result in tuple_result %}
+                <td><input type="checkbox" name=""></td>
+                <td>{{ result[1] }}</td>
+                <td>{{ result[2] }}</td>
+                <td>{{ result[3] }}</td>
+                <td>{{ result[4] }}</td>
+                <td>{{ result[5] }}</td>
+                <td>编辑</td>
+                <td>删除</td>
+            {% endfor %}
 		</tbody>
 	</table>
 	<p class="pull-left">每页10条记录</p>
