--- a/pro/templates/users_add.html
+++ b/pro/templates/users_add.html
@@ -1,121 +1,116 @@
 {% extends "layout.html" %}
 {% block users %}
 <div class="users-list table-responsive">
-    <button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
-        <span class="glyphicon glyphicon-th-list"></span>添加新用户
-    </button>   
-    <form class="form-horizontal" role="form">
-        <div class="form-group">
-            <label for="firstname" class="col-sm-2 control-label">ID:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="firstname" 
-                       placeholder="请输入ID">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">用户名:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入用户名">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">密码:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入密码">
-            </div>
-        </div>
-        <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">确认密码:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入确认密码">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">真实姓名:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入真实姓名">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">年龄:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入年龄">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">性别:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入性别">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">出生日期:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入出生日期">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">户籍:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入户籍">
-            </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">籍贯:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入籍贯">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">身份证号:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入身份证号">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">专业名称:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入专业名称">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">联系地址:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入联系地址">
-            </div>
-        </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">用户邮件:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入用户邮件">
-            </div>
-        </div>
-         </div>
-            <div class="form-group">
-            <label for="lastname" class="col-sm-2 control-label">联系电话:</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="lastname" 
-                       placeholder="请输入联系电话">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-sm-offset-2 col-sm-10">
-                <button type="submit" class="btn btn-default">登录</button>
-                <button type="submit" class="btn btn-default">返回</button>
-            </div>
-        </div>
-    </form>
+<table class="table table-bordered table-hover">
+        <caption>
+            <button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+                <span class="glyphicon glyphicon-th-list"></span>添加新用户
+            </button>   
+        </caption>
+        <thead>
+            <tr>
+                <th>名称</th>
+                <th>内容</th>
+            </tr>
+        </thead>
+        <tbody>
+            <form class="" role="form">
+            <tr>
+                    <td><label for="firstname" class="col-sm-2 control-label">ID:</label></td>
+                    <td><input type="text" class="form-control" id="firstname" 
+                           placeholder="请输入ID"></td>
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">用户名:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入用户名">
+                </td>
+            </tr>
+           <tr> 
+                <td><label for="lastname" class="col-sm-2 control-label">密码:</label></td>
+                <td><input type="text" class="form-control" id="lastname"
+                           placeholder="请输入密码">
+                </td>
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">确认密码:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入确认密码"></td>
+
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">真实姓名:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入真实姓名"></td>            
+            </tr>
+           <tr>     
+                <td><label for="lastname" class="col-sm-2 control-label">年龄:</label></td>
+                <td> <input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入年龄"></td> 
+            </tr>
+           <tr> 
+                <td><label for="lastname" class="col-sm-2 control-label">性别:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入性别"></td>
+            </tr>
+           <tr>   
+                <td><label for="lastname" class="col-sm-2 control-label">出生日期:</label></td>
+                <td><input type="text" class="form-control" id="lastname"
+                           placeholder="请输入出生日期"></td>
+            </tr>
+           <tr>  
+                <td><label for="lastname" class="col-sm-2 control-label">户籍:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入户籍"></td>
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">籍贯:</label></td>
+                <td> <input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入籍贯"></td>
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">身份证号:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入身份证号"></td>
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">专业名称:</label></td>
+                <td><input type="text" class="form-control" id="lastname"
+                           placeholder="请输入专业名称"></td>
+
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">联系地址:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入联系地址"></td>
+
+            </tr>
+           <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">用户邮件:</label></td>
+                <td><input type="text" class="form-control" id="lastname" 
+                           placeholder="请输入用户邮件"></td>
+
+            </tr>
+            <tr>
+                <td><label for="lastname" class="col-sm-2 control-label">联系电话:</label></td>
+                <td> <input type="text" class="form-control" id="lastname"
+                           placeholder="请输入联系电话"></td>
+            </tr>
+            <tr>
+                <td><button type="submit" class="btn btn-default">登录</button></td>
+                <td><button type="submit" class="btn btn-default">返回</button></td>
+            </tr>
+        </form>
+        </tbody>
+    </table>
+
+
+    <div>
+        <button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
+            <span class="glyphicon glyphicon-th-list"></span>添加新用户
+        </button>
+    </div>  
+    <div>
+ 
 </div>
 {% endblock %}
