--- a/pro/templates/users_add.html
+++ b/pro/templates/users_add.html
@@ -7,101 +7,103 @@
                 <span class="glyphicon glyphicon-th-list"></span>添加新用户
             </button>   
         </caption>
+        <div class="container">
         <thead>
             <tr>
-                <th>名称</th>
-                <th>内容</th>
+                <th><lable class="control-label pull-right">名称</lable></th>
+                <th><lable>内容</lable></th>
             </tr>
         </thead>
         <tbody>
-            <form class="" role="form">
+            <form class="" role="form" method="POST" action="">
             <tr>
-                    <td><label for="firstname" class="col-sm-2 control-label">ID:</label></td>
-                    <td><input type="text" class="form-control" id="firstname" 
+                    <td><label for="id" class="control-label pull-right">ID:</label></td>
+                    <td><input type="text" class="form-control" name="id" 
                            placeholder="请输入ID"></td>
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">用户名:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="user_name" class=" control-label pull-right">用户名:</label></td>
+                <td><input type="text" class="form-control" name="user_name" 
                            placeholder="请输入用户名">
                 </td>
             </tr>
            <tr> 
-                <td><label for="lastname" class="col-sm-2 control-label">密码:</label></td>
-                <td><input type="text" class="form-control" id="lastname"
+                <td><label for="passwd" class=" control-label pull-right">密码:</label></td>
+                <td><input type="text" class="form-control" name="passwd"
                            placeholder="请输入密码">
                 </td>
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">确认密码:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="confirm_password" class=" control-label pull-right">确认密码:</label></td>
+                <td><input type="text" class="form-control" name="confirm_password" 
                            placeholder="请输入确认密码"></td>
 
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">真实姓名:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="real_name" class=" control-label pull-right">真实姓名:</label></td>
+                <td><input type="text" class="form-control" name="real_name" 
                            placeholder="请输入真实姓名"></td>            
             </tr>
            <tr>     
-                <td><label for="lastname" class="col-sm-2 control-label">年龄:</label></td>
-                <td> <input type="text" class="form-control" id="lastname" 
+                <td><label for="age" class=" control-label pull-right">年龄:</label></td>
+                <td> <input type="text" class="form-control" name="age" 
                            placeholder="请输入年龄"></td> 
             </tr>
            <tr> 
-                <td><label for="lastname" class="col-sm-2 control-label">性别:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="sex" class=" control-label pull-right">性别:</label></td>
+                <td><input type="text" class="form-control" name="sex" 
                            placeholder="请输入性别"></td>
             </tr>
            <tr>   
-                <td><label for="lastname" class="col-sm-2 control-label">出生日期:</label></td>
-                <td><input type="text" class="form-control" id="lastname"
+                <td><label for="date_birth" class=" control-label pull-right">出生日期:</label></td>
+                <td><input type="text" class="form-control" name="date_birth"
                            placeholder="请输入出生日期"></td>
             </tr>
            <tr>  
-                <td><label for="lastname" class="col-sm-2 control-label">户籍:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="household_registration" class=" control-label pull-right">户籍:</label></td>
+                <td><input type="text" class="form-control" name="household_registration" 
                            placeholder="请输入户籍"></td>
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">籍贯:</label></td>
-                <td> <input type="text" class="form-control" id="lastname" 
+                <td><label for="native_place" class=" control-label pull-right">籍贯:</label></td>
+                <td> <input type="text" class="form-control" name="native_place" 
                            placeholder="请输入籍贯"></td>
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">身份证号:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="ID_number" class=" control-label pull-right">身份证号:</label></td>
+                <td><input type="text" class="form-control" name="ID_number" 
                            placeholder="请输入身份证号"></td>
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">专业名称:</label></td>
-                <td><input type="text" class="form-control" id="lastname"
+                <td><label for="professional_title" class=" control-label pull-right">专业名称:</label></td>
+                <td><input type="text" class="form-control" name="professional_title"
                            placeholder="请输入专业名称"></td>
 
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">联系地址:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="address" class=" control-label pull-right">联系地址:</label></td>
+                <td><input type="text" class="form-control" name="address" 
                            placeholder="请输入联系地址"></td>
 
             </tr>
            <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">用户邮件:</label></td>
-                <td><input type="text" class="form-control" id="lastname" 
+                <td><label for="user_mail" class=" control-label pull-right">用户邮件:</label></td>
+                <td><input type="text" class="form-control" name="user_mail" 
                            placeholder="请输入用户邮件"></td>
 
             </tr>
             <tr>
-                <td><label for="lastname" class="col-sm-2 control-label">联系电话:</label></td>
-                <td> <input type="text" class="form-control" id="lastname"
+                <td><label for="contract_phone" class=" control-label pull-right">联系电话:</label></td>
+                <td> <input type="text" class="form-control" name="contract_phone"
                            placeholder="请输入联系电话"></td>
             </tr>
             <tr>
-                <td><button type="submit" class="btn btn-default">登录</button></td>
-                <td><button type="submit" class="btn btn-default">返回</button></td>
+                <td><button type="submit" class="btn btn-default pull-right">登录</button></td>
+                <td><button type="" class="btn btn-default">返回</button></td>
             </tr>
         </form>
         </tbody>
+        </div>
     </table>
 
 
