--- a/pro/templates/users_add.html
+++ b/pro/templates/users_add.html
@@ -15,7 +15,7 @@
             </tr>
         </thead>
         <tbody>
-            <form class="" role="form" method="POST" action="">
+            <form class="" role="form" method="POST" action="/users/add">
             <tr>
                     <td><label for="id" class="control-label pull-right">ID:</label></td>
                     <td><input type="text" class="form-control" name="id" 
