--- a/pro/templates/users_add.html
+++ b/pro/templates/users_add.html
@@ -99,7 +99,7 @@
             </tr>
             <tr>
                 <td><button type="submit" class="btn btn-default pull-right">登录</button></td>
-                <td><button type="" class="btn btn-default">返回</button></td>
+                <td><button class="btn btn-default"  onclick="javascript:history.back(-1);">返回</button></td>
             </tr>
         </form>
         </tbody>
