--- a/pro/templates/users_select.html
+++ b/pro/templates/users_select.html
@@ -4,7 +4,7 @@
 <table class="table table-bordered table-hover">
         <caption>
             <button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
-                <span class="glyphicon glyphicon-th-list"></span>添加新用户
+                <span class="glyphicon glyphicon-th-list"></span>查询新用户
             </button>   
         </caption>
         <div class="container">
@@ -15,7 +15,7 @@
             </tr>
         </thead>
         <tbody>
-            <form class="" role="form" method="POST" action="/users/add">
+            <form class="" role="form" method="POST" action="/users/select">
             <tr>
                     <td><label for="id" class="control-label pull-right">ID:</label></td>
                     <td><input type="text" class="form-control" name="id" 
@@ -26,18 +26,6 @@
                 <td><input type="text" class="form-control" name="user_name" 
                            placeholder="请输入用户名">
                 </td>
-            </tr>
-           <tr> 
-                <td><label for="passwd" class=" control-label pull-right">密码:</label></td>
-                <td><input type="text" class="form-control" name="passwd"
-                           placeholder="请输入密码">
-                </td>
-            </tr>
-           <tr>
-                <td><label for="confirm_password" class=" control-label pull-right">确认密码:</label></td>
-                <td><input type="text" class="form-control" name="confirm_password" 
-                           placeholder="请输入确认密码"></td>
-
             </tr>
            <tr>
                 <td><label for="real_name" class=" control-label pull-right">真实姓名:</label></td>
@@ -98,13 +86,13 @@
                            placeholder="请输入联系电话"></td>
             </tr>
             <tr>
-                <td><button type="submit" class="btn btn-default pull-right">登录</button></td>
+                <td><button type="submit" class="btn btn-default pull-right">查询</button></td>
                 <td><button class="btn btn-default"  onclick="javascript:history.back(-1);">返回</button></td>
             </tr>
         </form>
         </tbody>
         </div>
-    </table>  
+    </table> 
     <div>
  
 </div>
