增加管理员信息页

--- a/pro/templates/admin_list.html
+++ b/pro/templates/admin_list.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
-{% block users %}
+{% block admininfo %}
 <div class="users-list table-responsive">
 	<table class="table table-bordered table-hover">
 		<caption>
