--- a/pro/templates/layout.html
+++ b/pro/templates/layout.html
@@ -16,7 +16,7 @@
 	{% block login %}{% endblock %}
 	{% block admin %}{% endblock %}
 	{% block users %}{% endblock %}
-	{% block mainlink %}{% endblock %}
+	{% block admininfo %}{% endblock %}
 	{% block bodylink %}{% endblock %}
 	{% block tools %}{% endblock %}
 	{% block contracts %}{% endblock %}
