增加会议室查询界面模块

--- a/pro/templates/conference_select.html
+++ b/pro/templates/conference_select.html
@@ -4,7 +4,7 @@
 <table class="table table-bordered table-hover">
         <caption>
             <button type="button" class="btn btn-primary btn-lg pull-left" style="font-size: 10px">
-                <span class="glyphicon glyphicon-th-list"></span>添加新会议室
+                <span class="glyphicon glyphicon-th-list"></span>会议室查询
             </button>   
         </caption>
         <div class="container">
@@ -75,7 +75,7 @@
 
             </tr>
             <tr>
-                <td><button type="submit" class="btn btn-default pull-right">添加</button></td>
+                <td><button type="submit" class="btn btn-default pull-right">查询</button></td>
                 <td><button class="btn btn-default"  onclick="javascript:history.back(-1);">返回</button></td>
             </tr>
         </form>
