优化照片注释，优化用户添加编号

--- a/pro/templates/users_add.html
+++ b/pro/templates/users_add.html
@@ -17,7 +17,7 @@
         <tbody>
             <form class="" role="form" method="POST" action="/users/add">
             <tr>
-                    <td><label for="id" class="control-label pull-right">ID:</label></td>
+                    <td><label for="id" class="control-label pull-right">用户编号:</label></td>
                     <td><input type="text" class="form-control" name="id" 
                            placeholder="请输入ID"></td>
             </tr>
