优化用户查询

--- a/pro/templates/users_select.html
+++ b/pro/templates/users_select.html
@@ -17,9 +17,9 @@
         <tbody>
             <form class="" role="form" method="POST" action="/users/select">
             <tr>
-                    <td><label for="id" class="control-label pull-right">ID:</label></td>
+                    <td><label for="id" class="control-label pull-right">用户编号:</label></td>
                     <td><input type="text" class="form-control" name="id" 
-                           placeholder="请输入ID"></td>
+                           placeholder="请输入用户编号"></td>
             </tr>
            <tr>
                 <td><label for="user_name" class=" control-label pull-right">用户名:</label></td>
