优化函数名

--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <frameset cols="15%,85%">
-        <frame src="{{ url_for('admintitle')}}"/>
-        <frame src="{{ url_for('userlist')}}" name="show"/>
+        <frame src="{{ url_for('admin_title')}}"/>
+        <frame src="{{ url_for('user_list')}}" name="show"/>
     </frameset>
 </html>
