优化函数名

--- a/pro/templates/admin.html
+++ b/pro/templates/admin.html
@@ -2,6 +2,6 @@
 <html>
     <frameset cols="15%,85%">
         <frame src="{{ url_for('admin_title')}}"/>
-        <frame src="{{ url_for('user_list')}}" name="show"/>
+        <frame src="{{ url_for('users_list')}}" name="show"/>
     </frameset>
 </html>
