增加会议室列表展示

--- a/pro/templates/conference_add.html
+++ b/pro/templates/conference_add.html
@@ -15,62 +15,62 @@
             </tr>
         </thead>
         <tbody>
-            <form class="" role="form" method="POST" action="/users/add">
+            <form class="" role="form" method="POST" action="/conference/add">
             <tr>
-                    <td><label for="id" class="control-label pull-right">申请人账号:</label></td>
-                    <td><input type="text" class="form-control" name="id" 
+                    <td><label for="sqrzh" class="control-label pull-right">申请人账号:</label></td>
+                    <td><input type="text" class="form-control" name="sqrzh" 
                            placeholder="请输入申请人账号"></td>
             </tr>
            <tr>
-                <td><label for="user_name" class=" control-label pull-right">申请人姓名:</label></td>
-                <td><input type="text" class="form-control" name="user_name" 
+                <td><label for="sqrxm" class=" control-label pull-right">申请人姓名:</label></td>
+                <td><input type="text" class="form-control" name="sqrxm" 
                            placeholder="请输入申请人姓名">
                 </td>
             </tr>
            <tr> 
-                <td><label for="passwd" class=" control-label pull-right">会议室名:</label></td>
-                <td><input type="text" class="form-control" name="passwd"
+                <td><label for="name" class=" control-label pull-right">会议室名:</label></td>
+                <td><input type="text" class="form-control" name="name"
                            placeholder="请输入会议室名">
                 </td>
             </tr>
            <tr>
-                <td><label for="real_name" class=" control-label pull-right">会议室地点:</label></td>
-                <td><input type="text" class="form-control" name="real_name" 
+                <td><label for="didian" class=" control-label pull-right">会议室地点:</label></td>
+                <td><input type="text" class="form-control" name="didian" 
                            placeholder="请输入会议室地点"></td>            
             </tr>
            <tr>     
-                <td><label for="age" class=" control-label pull-right">是否多媒体教室:</label></td>
-                <td> <input type="text" class="form-control" name="age" 
+                <td><label for="duomeiti" class=" control-label pull-right">是否多媒体教室:</label></td>
+                <td> <input type="text" class="form-control" name="duomeiti" 
                            placeholder="请输入是否多媒体教室"></td> 
             </tr>
            <tr> 
-                <td><label for="sex" class=" control-label pull-right">容纳人数:</label></td>
-                <td><input type="text" class="form-control" name="sex" 
+                <td><label for="rongnarenshu" class=" control-label pull-right">容纳人数:</label></td>
+                <td><input type="text" class="form-control" name="rongnarenshu" 
                            placeholder="请输入容纳人数"></td>
             </tr>
            <tr>   
-                <td><label for="date_birth" class=" control-label pull-right">会议主题:</label></td>
-                <td><input type="text" class="form-control" name="date_birth"
+                <td><label for="hueiyizhuti" class=" control-label pull-right">会议主题:</label></td>
+                <td><input type="text" class="form-control" name="hueiyizhuti"
                            placeholder="请输入会议主题"></td>
             </tr>
            <tr>  
-                <td><label for="household_registration" class=" control-label pull-right">申请状态:</label></td>
-                <td><input type="text" class="form-control" name="household_registration" 
+                <td><label for="shenqingzhuangtai" class=" control-label pull-right">申请状态:</label></td>
+                <td><input type="text" class="form-control" name="shenqingzhuangtai" 
                            placeholder="请输入申请状态"></td>
             </tr>
            <tr>
-                <td><label for="native_place" class=" control-label pull-right">会议室审批:</label></td>
-                <td> <input type="text" class="form-control" name="native_place" 
+                <td><label for="shenpi" class=" control-label pull-right">会议室审批:</label></td>
+                <td> <input type="text" class="form-control" name="shenpi" 
                            placeholder="请输入会议室审批"></td>
             </tr>
            <tr>
-                <td><label for="ID_number" class=" control-label pull-right">申请理由:</label></td>
-                <td><input type="text" class="form-control" name="ID_number" 
+                <td><label for="shenqliyou" class=" control-label pull-right">申请理由:</label></td>
+                <td><input type="text" class="form-control" name="shenqliyou" 
                            placeholder="请输入申请理由"></td>
             </tr>
            <tr>
-                <td><label for="professional_title" class=" control-label pull-right">申请时间:</label></td>
-                <td><input type="text" class="form-control" name="professional_title"
+                <td><label for="shenqsjian" class=" control-label pull-right">申请时间:</label></td>
+                <td><input type="text" class="form-control" name="shenqsjian"
                            placeholder="请输入申请时间"></td>
 
             </tr>
