增加会议审批

--- a/pro/templates/admin_title.html
+++ b/pro/templates/admin_title.html
@@ -34,9 +34,9 @@
             <div id="collapseTwo" class="panel-collapse collapse">
                 <div class="panel-body">
                     <p><a href="{{ url_for('conference_add') }}" target="show">添加会议室</a></p>
-                    <p><a href="{{ url_for('conference_select')}}" target="show">查询会议室</a></p>
+                    <p><a href="{{ url_for('conference_select') }}" target="show">查询会议室</a></p>
                     <p><a href="{{ url_for('conference_list') }}" target="show">会议室信息</a></p>
-                    <p><a href="https://www.baidu.com/" target="show">会议室审批</a></p>
+                    <p><a href="{{ url_for('conference_sure') }}" target="show">会议室审批</a></p>
                 </div>
             </div>
         </div>
