给审批加入按键

--- a/pro/templates/conference_sure.html
+++ b/pro/templates/conference_sure.html
@@ -54,8 +54,8 @@
                     <td>{{ result[9] }}</td>
                     <td>{{ result[10] }}</td>
                     <td>{{ result[11] }}</td>
-                    <td>同意</td>
-                    <td>不同意</td>
+                    <td><button class="btn btn-info">同意</button></td>
+                    <td><button class="btn btn-danger">不同意</button></td>
                 </tr>
             {% endfor %}
 		</tbody>
