修复传输异常

--- a/pro/templates/admin_edit.html
+++ b/pro/templates/admin_edit.html
@@ -40,8 +40,8 @@
                 </td>
             </tr>
            <tr>
-                <td><label for="adminAddress" class=" control-label pull-right">管理员邮件:</label></td>
-                <td><input type="text" class="form-control" name="adminAddress" value="{{ tuple_result[0][4] }}" 
+                <td><label for="adminEmail" class=" control-label pull-right">管理员邮件:</label></td>
+                <td><input type="text" class="form-control" name="adminEmail" value="{{ tuple_result[0][4] }}" 
                            placeholder="请输入管理员邮件"></td>
             </tr>
            <tr>
