修复传输异常

--- a/pro/templates/admin_edit.html
+++ b/pro/templates/admin_edit.html
@@ -60,8 +60,8 @@
                            placeholder="请输入身份证"></td>
             </tr>
            <tr>   
-                <td><label for="adminIDcard" class=" control-label pull-right">出生日期:</label></td>
-                <td><input type="text" class="form-control" name="adminIDcard" value="{{ tuple_result[0][8] }}" 
+                <td><label for="adminCsrq" class=" control-label pull-right">出生日期:</label></td>
+                <td><input type="text" class="form-control" name="adminCsrq" value="{{ tuple_result[0][8] }}" 
                            placeholder="请输入出生日期"></td>
             </tr>
            <tr>  
