--- a/pro/templates/admin_login.html
+++ b/pro/templates/admin_login.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block login %}
-<div class="container btn-danger login-admin">
+<div class="container login-admin well well-lg">
 	<div class="login-admin-input">
 		<form class="bs-example bs-example-form" role="form" method="post" action="/adminlogin">
 			<div class="input-group input-group-lg">
