优化注册页

--- a/pro/templates/users_registered.html
+++ b/pro/templates/users_registered.html
@@ -34,6 +34,18 @@
                 </td>
             </tr>
            <tr>
+                <td><label for="userspassquestion" class=" control-label pull-right">密码保护问题:</label></td>
+                <td><input type="text" class="form-control" name="userspassquestion" 
+                           placeholder="请输入确认密码">
+                </td>
+            </tr>
+            <tr> 
+                <td><label for="userspassreply" class=" control-label pull-right">密码答案:</label></td>
+                <td><input type="text" class="form-control" name="userspassreply"
+                           placeholder="请输入密码">
+                </td>
+            </tr>
+           <tr>
                 <td><label for="confirm_password" class=" control-label pull-right">确认密码:</label></td>
                 <td><input type="text" class="form-control" name="confirm_password" 
                            placeholder="请输入确认密码"></td>
